<resources>
    <string name="app_name">Chapp</string>

    <string name="email_default_text">Email</string>
    <string name="password_default_text">Password</string>
    <string name="signin_button_text">SIGN IN</string>
    <string name="register_button_text">REGISTER</string>
    <string name="text_phish_app">Chapp</string>
    <string name="text_password_confirm">Retype Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_full_post">Full Post</string>
    <string name="sample_text">sample</string>
    <string name="nav_set_lists_text">Set Lists</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chapp</string>
    <string name="nav_header_subtitle">The Best Chat App!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_blog_posts_text">Blog Posts</string>

    <string name="nav_connections">Connections</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_logout">Logout</string>

    <!--Store Credentials -->
    <string name="action_logout">Logout</string>
    <string name="stay_logged_in">Remember my credentials</string>

    <string name="tv_contactname">Contact Name</string>"
    <string name="tv_message_contact">Message Contact</string>"
    <string name="imagebutton_message">Message Contact ImageButton</string>"
    <string name="imagebutton_request">Request Contact ImageButton</string>"
    <string name="tv_request_contact">Request Contact</string>

    <string-array name="member_search_values">
        <item>Username</item>
        <item>Email</item>
        <item>First Name</item>
        <item>Last Name</item>
    </string-array>

    <!-- current weather strings -->
    <string name="current_weather_no_location_permission_error">Can\'t display weather without location permission</string>
    <string name="weather_dialog_postal_code_hint">Enter a zipcode</string>
    <string name="weather_dialog_postal_code_error">Need to enter a zipcode</string>
    <string name="weather_hour_fragment_tag">HOUR TAG</string>
    <string name="weather_day_fragment_tag">DAY TAG</string>
    <string name="weather_current_fragment_tag">CURRENT TAG</string>
    <string name="title_activity_maps">Map</string>
    <!-- regex that will get each field of a weatherLocationItem from the String set in the shared preferences -->
    <string name="weather_prefs_location_regex">.*?city:(.*?),lat:(.*?),lon:(.*)</string>


    <!-- Forgot Password Strings -->
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="tv_sent_password_result">Results From Email Database</string>
</resources>
